FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20160909:
AUTHOR: amdmi3@FreeBSD.org

  Verbose build logs are now preferred and enabled by default for cmake,
  ninja and GNU configure.  Ports which still produce quiet build logs
  (hiding actual commands) are strongly advised to switch to verbose logs.

20160908:
AUTHOR: amdmi3@FreeBSD.org

  Support has been added for NONE license, use it when the port doesn't
  have cleanly defined licensing terms.  Note that without clean license
  allowing you to use and distribute the code it would be be illegal to do
  so in many jurisdictions, so for ports with NONE license no distfiles or
  packages are distributed.

20160824:
AUTHOR: mat@FreeBSD.org

  To complete the USE_GITHUB framework, a GH_SUBDIR variable has been added.
  It automatically moves a secondary distfile to the right place inside WRKSRC.
  It also extends the GH_TUPLE variable to make it as easy to use as possible.

  Before:

    GH_TUPLE=   Regaddi:Chart.js:f13f99b:chart_js \
                FVANCOP:ChartNew.js:77e7f87:chartnew_js
    post-extract:
            @${RMDIR} ${WRKSRC}/database ${WRKSRC}/3rd/Chart.js
            @${MV} ${WRKSRC_database} ${WRKSRC}/database
            @${MV} ${WRKSRC_chart_js} ${WRKSRC}/3rd/Chart.js

  After:

    GH_TUPLE=   Regaddi:Chart.js:f13f99b:chart_js/3rd/Chart.js \
                FVANCOP:ChartNew.js:77e7f87:chartnew_js/3rd/ChartNew.js

  It also works if not using GH_TUPLE but the regular
  GH_ACCOUNT/PROJECT/TAGNAME variables:

    GH_SUBDIR=  3rd/Chart.js:chart_js 3rd/ChartNew.js:chartnew_js

20160824:
AUTHOR: kde@FreeBSD.org

  A new USES file has been introduced: USES=kde:4, which replaces the old